@@ -1,13 +1,8 @@
 package mezz.jei.library.plugins.vanilla.brewing;
 
+import mezz.jei.api.ingredients.subtypes.UidContext;
 import mezz.jei.api.recipe.vanilla.IJeiBrewingRecipe;
-import mezz.jei.common.platform.IPlatformRegistry;
-import mezz.jei.common.platform.Services;
-import net.minecraft.core.registries.Registries;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.alchemy.Potion;
-import net.minecraft.world.item.alchemy.PotionUtils;
 
 import java.util.List;
 import java.util.Objects;
@@ -81,14 +76,8 @@ public class JeiBrewingRecipe implements IJeiBrewingRecipe {
 	}
 
 	private static boolean arePotionsEqual(ItemStack potion1, ItemStack potion2) {
-		if (potion1.getItem() != potion2.getItem()) {
-			return false;
-		}
-		Potion type1 = PotionUtils.getPotion(potion1);
-		Potion type2 = PotionUtils.getPotion(potion2);
-		IPlatformRegistry<Potion> potionRegistry = Services.PLATFORM.getRegistry(Registries.POTION);
-		ResourceLocation key1 = potionRegistry.getRegistryName(type1).orElse(null);
-		ResourceLocation key2 = potionRegistry.getRegistryName(type2).orElse(null);
+		String key1 = PotionSubtypeInterpreter.INSTANCE.apply(potion1, UidContext.Recipe);
+		String key2 = PotionSubtypeInterpreter.INSTANCE.apply(potion2, UidContext.Recipe);
 		return Objects.equals(key1, key2);
 	}
 
@@ -104,8 +93,9 @@ public class JeiBrewingRecipe implements IJeiBrewingRecipe {
 
 	@Override
 	public String toString() {
-		Potion inputType = PotionUtils.getPotion(potionInputs.get(0));
-		Potion outputType = PotionUtils.getPotion(potionOutput);
-		return ingredients + " + [" + potionInputs.get(0).getItem() + " " + inputType.getName("") + "] = [" + potionOutput + " " + outputType.getName("") + "]";
+		ItemStack input = potionInputs.getFirst();
+		String inputName = PotionSubtypeInterpreter.INSTANCE.apply(input, UidContext.Recipe);
+		String outputName = PotionSubtypeInterpreter.INSTANCE.apply(potionOutput, UidContext.Recipe);
+		return ingredients + " + [" + input.getItem() + " " + inputName + "] = [" + potionOutput + " " + outputName + "]";
 	}
 }
